Banner section alignment fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url("https://fonts.cdnfonts.com/css/gotham-pro");
-
-body {
-  font-family: "Gotham Pro ", sans-serif;
-}
